objects/Platform_Log_Event__e.object
<CustomObject>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_URL__c</fullName>
        <label>Record URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <label>User Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Platform Log Event</label>
    <pluralLabel>Platform Log Events</pluralLabel>
</CustomObject>